# stlc-liv

./: .gitignore  Makefile  Ntextual.opam  README.md  dune-project
_build/: log
doc/: co-contextual_pcf.tex  cocontextual_typing.tex  grammar.md
lib/: LivToken.ml  ast.ml  cctx_typechecker.ml  cctx_typechecker.mli  dune  errors.ml  examples.ml  examples.mli  interpreter.ml  interpreter.mli  interpreter_aux.ml  interpreter_aux.mli  lexer.mll  parse_wrapper.ml  parser.mly  stlc.ml  stlc_lexrules.mll  stlc_parser.mly  typechecker.ml  typechecker.mli  typechecker_aux.ml  typechecker_aux.mli
test/: Test1.txt  Test2.txt  comm-violation.wff  dune  dune.off  pcf-terms-1.wff  pcf-terms-2.wff  pcf-terms-3.wff  pcf-terms-4.wff  pcf-terms.wff  pcf-terms3.wff  pcf-terms4.wff  run-tests.py  shopper.wff  tcp.wff  tests.json
